update html name

--- a/8bitRadio/tree.html
+++ b/8bitRadio/tree.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <link rel="stylesheet" type="text/css" href="tree.css">
-    <title>Pedro Three.js App</title>
+    <title>8-Bit Radio</title>
 
   </head>
   <body>
